# baremetal

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
core/: CMakeLists.txt  Makefile  cmake_install.cmake  cpu.cpp  cpuRegister.cpp  decoder.cpp  main.cpp  memory.cpp
include/: cpu.h  cpuRegister.h  decoder.h  flags.h  memory.h  opcodes.h
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  tests.cpp
